# MTE-Robotics-Lab

./: LICENSE  README.md
Gazebo_Assets/env_sim/: package.xml
Gazebo_Assets/env_sim/config/: config_vacuum_gripper.yaml
Gazebo_Assets/env_sim/config/ur5/: gazebo_controllers_ur5_1.yaml
Gazebo_Assets/env_sim/launch/: gazebo_task_simulation.launch  gazebo_ur5_spawn.launch
Gazebo_Assets/env_sim/models/logical_camera2/: model.sdf
Gazebo_Assets/env_sim/models/sorting_bin_green_/: model.config
Gazebo_Assets/env_sim/models/sorting_bin_red_/: model.sdf
Gazebo_Assets/env_sim/scripts/: node_service_server_vacuum_gripper.py
Gazebo_Assets/env_sim/urdf/: ur5_1.urdf
Gazebo_Assets/env_sim/worlds/: gazebo_task.world
Media/: README.md
Task_Workspace/: README.md
Task_Workspace/env_sim/config/: config_vacuum_gripper.yaml
Task_Workspace/env_sim/launch/: gazebo_task_world.launch
Task_Workspace/env_sim/models/logical_camera1/: model.sdf
Task_Workspace/env_sim/models/logical_camera2/: model.sdf
Task_Workspace/env_sim/scripts/: node_service_server_vacuum_gripper.py
Task_Workspace/env_sim/urdf/: ur5_1.urdf
Task_Workspace/env_sim/worlds/: gazebo_task.world
Task_Workspace/pkg_moveit_ur5_1/: .setup_assistant  package.xml
Task_Workspace/pkg_moveit_ur5_1/config/: ompl_planning.yaml  ros_controllers.yaml  trajectory_control.yaml  ur5_1_moveit_controller.yaml
Task_Workspace/pkg_moveit_ur5_1/launch/: demo_gazebo.launch  final_ur5_gazebo_moveit.launch  gazebo.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  ur5_moveit_controller_manager.launch.xml
Task_Workspace/simulation_packages/env_sim/: CMakeLists.txt
Task_Workspace/simulation_packages/env_sim/config/: config_vacuum_gripper.yaml
Task_Workspace/simulation_packages/env_sim/models/bin_1_/: model.config  model.sdf
Task_Workspace/simulation_packages/env_sim/models/logical_camera2/: model.sdf
Task_Workspace/simulation_packages/env_sim/models/package_box_blue/: model.config
Task_Workspace/simulation_packages/env_sim/models/package_box_green/: model.config  model.sdf
Task_Workspace/simulation_packages/env_sim/models/package_box_red/: model.sdf
Task_Workspace/simulation_packages/env_sim/models/sorting_bin_red_/: model.config
Task_Workspace/simulation_packages/env_sim/scripts/: gazebo_spawn_models.py  node_service_server_vacuum_gripper.py
Task_Workspace/simulation_packages/env_sim/worlds/: gazebo_task.world
Task_Workspace/simulation_packages/gazebo_logical_camera/: CMakeLists.txt
Task_Workspace/simulation_packages/gazebo_logical_camera/include/hrwros_gazebo/: LogicalCameraImage.h  Model.h
Task_Workspace/simulation_packages/hrwros_gazebo/: CMakeLists.txt  package.xml
Task_Workspace/ur5_control/: CMakeLists.txt  package.xml
Task_Workspace/ur5_control/launch/: task.launch
Task_Workspace/ur5_control/scripts/: lib.py  ur5_sorter.py
e-yantra_data/: README.md
e-yantra_data/vb_simulation_pkgs/: README.md
e-yantra_data/vb_simulation_pkgs/gazebo_logical_camera/: package.xml
e-yantra_data/vb_simulation_pkgs/pkg_vb_sim/: CMakeLists.txt  package.xml
e-yantra_data/vb_t3_1202/pkg_moveit_ur5_1/: CMakeLists.txt  package.xml
e-yantra_data/vb_t3_1202/pkg_task3/: CMakeLists.txt  package.xml
(+68 files in other folders)
