<?xml version="1.0"?>
<package format="2">
  <name>gazebo_logical_camera</name>
  <version>1.0.0</version>
  <description>Plugin for gazebo, to simulate a Logical Camera. Developed by ARIAC.</description>

  <author email="support@e-yantra.org">e-Yantra</author>
  <maintainer email="support@e-yantra.org">e-Yantra</maintainer>

  <license>GPLv3</license>

  <!-- OSRF creators of the ARIAC package -->
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <author email="dhood@osrfoundation.org">D. Hood</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="sloretz@osrfoundation.org">Shane Loretz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
